--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.9.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.6",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "vercel": "^35.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
