--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "use-debounce": "^10.0.1",
     "vercel": "^35.1.0"
   },
   "devDependencies": {
